[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/Network/Lobby.gd" type="Script" id=1]
[ext_resource path="res://art/extra/NighBg.png" type="Texture" id=2]
[ext_resource path="res://font/kirby-classic.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://font/04B_11__.TTF" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]

size = 30
use_mipmaps = false
use_filter = false
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=2]

size = 20
use_mipmaps = true
use_filter = false
font_data = ExtResource( 4 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="Lobby" type="Node2D" index="0"]

script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="." index="0"]

modulate = Color( 0.0335388, 0.613281, 0.450229, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 576.0
margin_bottom = 1024.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
stretch_mode = 0
_sections_unfolded = [ "Visibility" ]

[node name="hostGame" type="Button" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 153.0
margin_top = 241.0
margin_right = 432.0
margin_bottom = 318.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Host New Game"
flat = false
align = 1
_sections_unfolded = [ "custom_fonts" ]

[node name="joinGame" type="Button" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 152.0
margin_top = 471.0
margin_right = 431.0
margin_bottom = 548.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Join Game"
flat = false
align = 1
_sections_unfolded = [ "custom_fonts" ]

[node name="TextEdit" type="TextEdit" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 163.0
margin_top = 389.0
margin_right = 436.0
margin_bottom = 440.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 2 )
text = "Enter IP"
readonly = false
highlight_current_line = false
syntax_highlighting = false
show_line_numbers = false
highlight_all_occurrences = false
override_selected_font_color = false
context_menu_enabled = true
smooth_scrolling = false
v_scroll_speed = 80.0
hiding_enabled = 0
wrap_lines = false
caret_block_mode = false
caret_blink = false
caret_blink_speed = 0.65
caret_moving_by_right_click = true
_sections_unfolded = [ "custom_fonts" ]

[connection signal="pressed" from="hostGame" to="." method="_on_buttonHost_pressed"]

[connection signal="pressed" from="joinGame" to="." method="_on_joinGame_pressed"]


